color module : TODO: color<->palette
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1156 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -72,6 +72,8 @@ PyX
      - __iadd__ and inplace enlarge, transform,...
   - mathtree module:
      - bug: -x**2 should be negative
+  - color module:
+     - should colors and palettes exclude each other?
 
 0.4.1 (2003/09/17):
   - canvas module:
