make boxalign working with current CVS
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1183 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/design/boxalign.tex
+++ b/design/boxalign.tex
@@ -108,6 +108,6 @@ the starting point ($\beta<0$) or end point ($\beta>1$) of the line
 segment should be considered for the alignment.
 
 \section{Examples}
-\hbox{\kern-2.3truecm\includegraphics{boxalignexample}}
+\includegraphics{boxalignexample}
 
 \end{document}
