--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 The installation of PyX is pretty straightforward if you have installed the
-Python distutils package. 
+Python distutils package.
 
 First, you have to decide which C extension modules you want to build. This can
 be done by setting the respective flags in the setup.cfg config file. The
@@ -10,17 +10,17 @@ and a C compiler.
 
 The second extension module provides Python binding for the kpathsea library,
 which enables fast searching for files in the TeX/LaTeX directory hierarchy. By
-default it is not built, because you need the header files of this libary,
-which are not included in many standard TeX distributions. Besides that, 
+default it is not built, because you need the header files of this library,
+which are not included in many standard TeX distributions. Besides that,
 the fallback, which uses the kpsewhich program, works equally well, although
 it is not as efficient as using the library directly. If you want
-to build the c extension module, you may also have to specify the location
+to build the C extension module, you may also have to specify the location
 of the kpathsea header files and the library in the setup.cfg file.
 
 After you have adapted the setup.cfg file to your needs, you can either build
 PyX locally by just running
 
-   python setup.py build_ext -i
+    python setup.py build_ext -i
 
 On the other hand, a system wide installation can be performed with help of
 
