--- a/CHANGES
+++ b/CHANGES
@@ -5,8 +5,6 @@ PyX
 TODO:
   - graph module
     - rect style (and errorbars?) should use clipping (TODO: should they or do the now?)
-    - address datavmin and datavmax
-    - another (the last?!) axis redesign: axispos -> class of its own; remove axis.axiscanvas
     - do not include unneeded line segments when the axis range is set manually
     - allow for an iteration of a graph style, when it is used several times
     - common bboxes for different graphs
@@ -62,6 +60,10 @@ TODO:
     - removed manualpart and partitioners mix keyword
     - results of the splitting at "=" in graph.function were not stripped
     - skip title=None in key (cf. bug #821284), properly align a single key entry
+    - another (the last?!) axis redesign: axispos -> class of its own; remove axis.axiscanvas
+    - tick/data-vmin/vmax removed (TODO: documentation)
+    - pathaxis (TODO: example and documentation)
+    - various linkaxis (TODO: example and documentation, FAQ?)
   - canvas module:
     - stroke and fill now support trafos (TODO: documentation)
     - uppercase version of a4, a3, ... paperformats
@@ -93,6 +95,8 @@ TODO:
     - path.tangent is missing in the documentation
   - color module:
      - should colors and palettes exclude each other?
+  - graph module:
+    - multiple finish calles in linkaxis!
   - documentation!!!
   - check FAQ
 
