recommend use of math.degrees and math.radians
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1208 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -29,9 +29,12 @@ TODO:
   - path module:
     - reverse needs to be fixed
     - there should be a path._at, path._begin, path._end
+    - use math.degrees and math.radians
   - data module:
     - data.data should add line number like data.datafile
     - use csv module (new in 2.3)
+  - connnector module:
+    - use math.degrees and math.radians instead of self-written functions
 
 0.5 (????/??/??):
   - setup.py and distribution:
