--- a/CHANGES
+++ b/CHANGES
@@ -113,7 +113,7 @@ TODO:
 
   TODO for PyX 0.5 (please feel free to move items up to the general TODO list)
   - path module:
-    - path.split takes several points (as *args) while lentopar takes a list of points
+    - path.split takes several points (as *args) while lentopar takes a list of points (done, but fix docu)
     - path.tangent is missing in the documentation
   - color module:
      - should colors and palettes exclude each other?
