--- a/INSTALL
+++ b/INSTALL
@@ -1,21 +1,46 @@
+Installation
+============
+
+Prerequisites
+-------------
+
+PyX needs Python 2.x and a TeX installation (including Type1 fonts). Try to
+start 'python', 'tex' and 'kpsewhich cmr10.pfb' (the later should issue a full
+path of the requested Type1 font).
+
+Local usage without C extention modules
+---------------------------------------
+
+PyX can be run without any installation. Copy the file hello.py from the
+examples directory to the main pyx directory and type 'python hello.py'. When
+your TeX installation isn't configured to use Type1 fonts by default, you may
+insert the line 'text.set(fontmaps="psfonts.cmz")' after the pyx import
+statement and try again. See the FAQ for further details about TeX and font
+configuration issues.
+
+Installation procedure
+----------------------
+
 The installation of PyX is pretty straightforward if you have installed the
 Python distutils package.
 
 First, you have to decide which C extension modules you want to build. This can
-be done by setting the respective flags in the setup.cfg config file. The
-default settings build the t1strip extension module, which enables partial font
-downloading (i.e. only the glyphs of a font that are used are included in the
-eps file). The only requisites for building this module are the Python headers
-and a C compiler.
+be done by setting the respective flags in the setup.cfg config file. By default
+no C extension modules are build and appropriate fallbacks are in place.
+
+The build_t1strip option enables the t1strip extension module, which provides
+partial font downloading (i.e. only the glyphs of a font that are used are
+included in the eps file). The only requisites for building this module are the
+Python headers and a C compiler.
 
 The second extension module provides Python binding for the kpathsea library,
-which enables fast searching for files in the TeX/LaTeX directory hierarchy. By
-default it is not built, because you need the header files of this library,
-which are not included in many standard TeX distributions. Besides that,
-the fallback, which uses the kpsewhich program, works equally well, although
-it is not as efficient as using the library directly. If you want
-to build the C extension module, you may also have to specify the location
-of the kpathsea header files and the library in the setup.cfg file.
+which enables fast searching for files in the TeX/LaTeX directory hierarchy. You
+will need the header files of this library, which are not included in many
+standard TeX distributions. Besides that, the fallback, which uses the kpsewhich
+program, works equally well, although it is not as efficient as using the
+library directly. If you want to build the C extension module, you may also have
+to specify the location of the kpathsea header files and the library in the
+setup.cfg file.
 
 After you have adapted the setup.cfg file to your needs, you can either build
 PyX locally by just running
